# bazel-config-setting-visibility-bug

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel
build_defs/: BUILD.bazel  defs.bzl
config_setting/: BUILD.bazel
